--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
       crossorigin="anonymous"
     />
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/daa124cd6c.js" crossorigin="anonymous"></script>
     <!-- css style  -->
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <header class="container-lg">
@@ -33,19 +35,19 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active fw-bold" aria-current="page" href="#">Home</a>
+                <a class="nav-link active fw-semibold" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold" href="#">Shop</a>
+                <a class="nav-link fw-semibold" href="#">Shop</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold">News</a>
+                <a class="nav-link fw-semibold">News</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link fw-bold">Contact</a>
+                <a class="nav-link fw-semibold">Contact</a>
               </li>
             </ul>
-            <button class="ms-5 btn btn-outline-success fw-bold" type="submit">Login</button>
+            <button class="ms-5 btn btn-outline-danger fw-bold" type="submit">Login</button>
           </div>
         </div>
       </nav>
@@ -142,9 +144,216 @@
       </div>
     </header>
     <!-- main  -->
-    <main></main>
+    <main>
+      <!-- Hot Bikes section  -->
+      <section class="container text-start text-md-center mt-5">
+        <h1>Fetured Bikes In This Year</h1>
+        <p class="text-danger">Best bike collection</p>
+        <hr class="w-25 mx-auto border-danger" />
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 px-5 g-5 mt-5">
+          <div class="col">
+            <img class="w-100" src="images/feature-bike.jpg" alt="">
+          </div>
+          <div class="col">
+            <img class="w-75" src="images/feature-bike.jpg" alt="">
+          </div>
+          <div class="col">
+            <img class="w-100" src="images/feature-bike.jpg" alt="">
+          </div>
+        </div>
+      </section>
+      <!-- new arrival section  -->
+      <section class="container bg-info bg-opacity-25 rounded py-5 px-3 mt-5">
+        <h1 class="text-center mt-5">New Arrival</h1>
+        <div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100 rounded-4">
+                <img src="images/bike-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Ducati XDIAVEL S-73</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn btn-outline-danger">Purchase</button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 rounded-4">
+                <img src="images/bike-3.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Motorcycles & Scooters</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn btn-outline-danger">Purchase</button>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100 rounded-4">
+                <img src="images/bike-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">2021 Honda CBR500R</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <button class="btn btn-outline-danger">Purchase</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Happy Clients says  -->
+      <section class="container my-5">
+        <h1 class="text-center mb-5">Happy <span class="text-danger">Clients says</span></h1>
+        <div>
+          <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card text-center h-100">
+                <img src="images/user-1.png" class="card-img-top w-50 text-center mx-auto mt-3" alt="...">
+                <div class="card-body">
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="text-warning">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                  </p>
+                  <h5 class="text-primary fw-semibold">Regina Miles</h5>
+                  <p>Banker</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card text-center h-100">
+                <img src="images/user-2.png" class="card-img-top w-50 text-center mx-auto mt-3" alt="...">
+                <div class="card-body">
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="text-warning">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                  </p>
+                  <h5 class="text-primary fw-semibold">Regina Miles</h5>
+                  <p>Banker</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card text-center h-100">
+                <img src="images/user-3.png" class="card-img-top w-50 text-center mx-auto mt-3" alt="...">
+                <div class="card-body">
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                  <p class="text-warning">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                  </p>
+                  <h5 class="text-primary fw-semibold">Regina Miles</h5>
+                  <p>Banker</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Frequently Asked Questions  -->
+      <section class="container mt-5 py-2 px-2 bg-secondary-subtle rounded">
+        <h1 class="my-5 text-center">Frequently Asked <span class="text-warning">Questions</span></h1>
+        <div class="row row-cols-1 row-cols-md-2 mt-5 g-4 ">
+          <div class="col text-center">
+            <img class="w-50" src="images/faq.png" alt="">
+          </div>
+          <div class="col py-5">
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                   <strong> What are the most important things I should know about riding a bike?</strong>
+                  </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse show" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the class. This is the first item's accordion body.</div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                 <strong>   How can I tell if my helmet is old and I need a new one?</strong>
+                  </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the  class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingThree">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                    <strong>My bike has been in storage is it safe to ride?</strong>
+                  </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the  class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingFour">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseFour">
+                   <strong> What rules should I follow when riding my bike?</strong>
+                  </button>
+                </h2>
+                <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the  class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </section>
+    </main>
+
+
+
     <!-- footer  -->
-    <footer></footer>
+    <footer class="bg-black mt-5">
+      <div class="container">
+        <div class="row row-cols-1 row-cols-md-2">
+          <div class="col-md-8">
+            <div class="d-flex flex-wrap mt-5">
+              <p><a class="text-decoration-none mx-3 text-white" href="">Download Now</a></p>
+              <p><a class="text-decoration-none mx-3 text-white" href="">License</a></p>
+            </div>
+            <div class="d-flex flex-wrap">
+              <p><a class="text-decoration-none mx-3 text-white" href="">About</a></p>
+              <p><a class="text-decoration-none mx-3 text-white" href="">Features</a></p>
+              <p><a class="text-decoration-none mx-3 text-white" href="">Pricing</a></p>
+              <p><a class="text-decoration-none mx-3 text-white" href="">Careers</a></p>
+              <p><a class="text-decoration-none mx-3 text-white" href="">Help</a></p>
+              <p><a class="text-decoration-none mx-3 text-white" href="">Privacy Policy</a></p>
+            </div>
+            <div>
+              <p class="text-white">&copy;  2020 bike. All rights reserved</p>
+            </div>
+          </div>
+          <div class="col-md-4 mt-5">
+            <p class="text-white">Get the App</p>
+            <div>
+              <img class="w-50 h-50 py-2" src="images/android.png" alt="">
+              <img class="w-50 h-50 mb-5 " src="images/ios.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Bootstrap js  -->
     <script
